# nostr-mirror

./: pyproject.toml
nostr_mirror/: main.py
