[tool.poetry]
name = "nostr-mirror"
version = "0.1.0"
description = ""
authors = ["kchro3 <jhara1418@gmail.com>"]
readme = "README.md"
packages = [{include = "nostr_mirror"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
